--- a/quanx/rewrite/Imoutai-auto-reserve.conf
+++ b/quanx/rewrite/Imoutai-auto-reserve.conf
@@ -1,5 +1,5 @@
-#仓库地址https://github.com/Yuheng0101/X/tree/main/Tasks/imaotai
+#仓库地址https://github.com/FoKit/Scripts
 
 hostname = app.moutai519.com.cn
 
-^https:\/\/app.moutai519.com.cn\/xhr\/front\/user\/info url script-response-body https://raw.githubusercontent.com/Yuheng0101/X/main/Tasks/imaotai/imaotai.js
+^https:\/\/app\.moutai519\.com\.cn\/xhr\/front\/mall\/message\/unRead\/query url script-request-headers https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/i-maotai.js
