--- a/quanx/rewrite/app-collection-unlock.conf
+++ b/quanx/rewrite/app-collection-unlock.conf
@@ -1,11 +1,12 @@
 #来源: https://raw.githubusercontent.com/chxm1023/Script_X/main/Collections.conf
 
 # 彩云天气
-# hostname = *.cyapi.cn, *.caiyunapp.com, adx.sogaha.cn
-^https?:\/\/(biz|wrapper)\.cyapi\.cn\/(.+\/(user.+|visitors|activity)|p\/v\d\/vip_info) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/caiyun.js
+# hostname = *.cyapi.cn, *.caiyunapp.com,
+^https?:\/\/(biz|wrapper|starplucker)\.(cyapi|caiyunapp)\.(cn|com)\/(.+\/(user\?app_name|activity\?app_name|visitors|operation\/banners)|p\/v\d\/(vip_info|user_info)) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/caiyuntianqi.js
+^https?:\/\/(api|wrapper)\.(cyapi|caiyunapp)\.(cn|com)\/v\d\/(satellite|nafp\/origin_images) url script-request-header https://raw.githubusercontent.com/chxm1023/Rewrite/main/caiyuntianqi.js
 # 以下新版已失效
 #https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/chxm1023/Rewrite/main/caiyun_svip.js
-^https?:\/\/ad\.caiyunapp\.com\/ url reject
+^https?:\/\/ad\.(caiyunapp|cyapi)\.(cn|com) url reject-200
 ^http:\/\/adx\.sogaha\.cn\/sdk\/ad\/get url reject-200
 
 # 墨迹天气
